--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
+    <!-- Navbar Grande -->
     <div class="navbar-lg">
         <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
             <div class="container-fluid d-flex justify-content-between">
@@ -27,10 +27,10 @@
                 </form>
                 <ul class="navbar-nav flex-row flex-wrap ms-md-auto align-items-center ">
                     <li class="nav-item text-center align-self-center ">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active text-secundary" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item text-center align-self-center">
-                        <a class="nav-link" href="#">Estadisticas</a>
+                        <a class="nav-link text-secundary" href="#">Estadisticas</a>
                     </li>
                     <li class="nav-item text-center align-self-center">
                         <a class="nav-link" href="#"><img src="/icons/nuevoAnuncio.png" width="35"></a>
